logging was added

--- a/configs/aggregator.yaml
+++ b/configs/aggregator.yaml
@@ -1,15 +1,17 @@
-DATETIME_INDEX: timestamp
-HOSTNAME_INDEX: hostname
+STORAGE_DATASOURCE: mg
+STORAGE_DATASINK: mg
 MG_HOST: 172.17.18.83
 MG_PORT: 27017
+MG_USER: dbadmin
+MG_PASSWORD: password123
 MG_INPUT_DB: anomalydb
-MG_INPUT_COLS: 
-  - utm_anomaly
-MG_TARGET_COLS: 
-  - utm_aggregated
 MG_TARGET_DB: anomalydb
-STORAGE_DATASINK: mg
-STORAGE_DATASOURCE: mg
-AGGR_TIME_SPAN: 86400
+MG_INPUT_COLS:
+  - web_anomaly
+MG_TARGET_COLS:
+  - web_aggregated
+DATETIME_INDEX: timestamp
+HOSTNAME_INDEX: hostname
+AGGR_TIME_SPAN: 1296000
 AGGR_EPS: 0.01
 AGGR_MIN_SAMPLES: 2
