--- a/configs/aggregator.yaml
+++ b/configs/aggregator.yaml
@@ -5,6 +5,8 @@ MG_PORT: 27017
 MG_USER: dbadmin
 MG_PASSWORD: password123
 MG_INPUT_DB: anomalydb
+MG_CA_CERT: "/home/nadzya/Apps/log-aggregator/configs/LAD_CA.crt"
+MG_VERIFY_CERT: true
 MG_TARGET_DB: anomalydb
 MG_INPUT_COLS:
   - web_anomaly
