--- a/configs/aggregator.yaml
+++ b/configs/aggregator.yaml
@@ -1,5 +1,6 @@
 STORAGE_DATASOURCE: mg
 STORAGE_DATASINK: stdout
+#STORAGE_DATASINK: mg
 MG_HOST: 172.17.18.83
 MG_PORT: 27017
 MG_USER: dbadmin
@@ -9,9 +10,11 @@ MG_CA_CERT: "/home/nadzya/Apps/log-aggregator/configs/LAD_CA.crt"
 MG_VERIFY_CERT: true
 MG_TARGET_DB: anomalydb
 MG_INPUT_COLS:
-  - network_anomaly
+  - utm_anomaly
+  - web_anomaly
 MG_TARGET_COLS:
-  - network_aggregated
+  - utm_aggregated
+  - web_aggregated
 DATETIME_INDEX: timestamp
 HOSTNAME_INDEX: hostname
 AGGR_TIME_SPAN: 1296000
